[tool.poetry]
name = "cronyx-client"
version = "1.0.0"
description = "A Python HTTP client wrapper for CronyxServer, seamlessly integrating the power of Cronyx across platforms using a familiar API interface."
authors = ["yujiosaka <yujisobe@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yujiosaka/CronyxClient.py"
repository = "https://github.com/yujiosaka/CronyxClient.py"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.2"
pydantic = "^2.4.2"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pre-commit = "^3.5.0"
pytype = "^2023.10.31"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.21.1"
pymongo = "^4.6.0"
ruff = "^0.11.7"

[tool.ruff]
line-length = 125

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
