[project]
name = "cronyx-client"
version = "1.1.1"
description = "A Python HTTP client wrapper for CronyxServer, seamlessly integrating the power of Cronyx across platforms using a familiar API interface."
authors = [
    {name = "yujiosaka", email = "yujisobe@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8.1,<4.2"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.4.2",
    "httpx>=0.28.1",
]
urls = {homepage = "https://github.com/yujiosaka/CronyxClient.py", repository = "https://github.com/yujiosaka/CronyxClient.py"}

[project.optional-dependencies]
dev = [
    "coverage>=7.3.2",
    "pre-commit>=3.5.0",
    "pytype>=2023.10.31",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    "pytest-asyncio>=0.21.1",
    "pymongo>=4.6.0",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 125

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
